# sb1-mehcrf

./: .env  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
app/: __init__.py
app/agents/: __init__.py  finance_agent.py  team_agent.py  web_agent.py
app/routes/: agents.py
app/schemas/: __init__.py  agent.py
app/services/: agent_service.py
src/: App.tsx
src/components/: AgentResponse.tsx  AgentSelector.tsx  ApiKeyInput.tsx  ChatInterface.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  FeedbackDialog.tsx  Footer.tsx  Header.tsx  Layout.tsx  LoadingButton.tsx  LoadingSpinner.tsx  MessageInput.test.tsx  MessageInput.tsx  ModelSelector.tsx  Navigation.tsx  OnboardingOverlay.tsx  OnboardingSteps.tsx  OnboardingTip.tsx  PlatformSelector.tsx  ResponseDisplay.tsx  SecurityBadge.tsx  SuccessMessage.tsx  Tooltip.tsx
src/config/: constants.ts
src/hooks/: useAgent.ts  useApiKey.ts  useChat.ts
src/pages/: About.tsx  Generator.tsx  Home.tsx  Pricing.tsx  Privacy.tsx  Settings.tsx
src/services/: agentApi.ts  agentService.ts  apiKey.ts  openai.ts
src/store/: apiKeyStore.ts  generatorStore.ts  index.ts  settingsStore.ts
src/types/: index.ts
src/utils/: analytics.ts  api.ts  encryption.ts  validation.ts
